@@ -34,6 +34,9 @@ using Mono.Unix;
 namespace Mono.Unix {
 
 	public struct UnixPipes
+#if NET_2_0
+		: IEquatable <UnixPipes>
+#endif
 	{
 		public UnixPipes (UnixStream reading, UnixStream writing)
 		{
@@ -50,6 +53,36 @@ namespace Mono.Unix {
 			int r = Syscall.pipe (out reading, out writing);
 			UnixMarshal.ThrowExceptionForLastErrorIf (r);
 			return new UnixPipes (new UnixStream (reading), new UnixStream (writing));
+		}
+
+		public override bool Equals (object value)
+		{
+			if (value.GetType() != GetType())
+				return false;
+			UnixPipes other = (UnixPipes) value;
+			return Reading.Handle == other.Reading.Handle &&
+				Writing.Handle == other.Writing.Handle;
+		}
+
+		public bool Equals (UnixPipes value)
+		{
+			return Reading.Handle == value.Reading.Handle &&
+				Writing.Handle == value.Writing.Handle;
+		}
+
+		public override int GetHashCode ()
+		{
+			return Reading.Handle.GetHashCode () ^ Writing.Handle.GetHashCode ();
+		}
+
+		public static bool operator== (UnixPipes lhs, UnixPipes rhs)
+		{
+			return lhs.Equals (rhs);
+		}
+
+		public static bool operator!= (UnixPipes lhs, UnixPipes rhs)
+		{
+			return !lhs.Equals (rhs);
 		}
 	}
 }
